--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <header>
       <!-- header nav start -->
-      <nav class="blured-background navbar fixed-top navbar-expand-lg navbar-light bg-white py-4">
+      <nav
+        class="blured-background navbar fixed-top navbar-expand-lg navbar-light bg-white py-4"
+      >
         <div class="container">
           <a id="brand-link" class="navbar-brand" href="#"
             ><img src="./images/logo-bookmark.svg" alt="Bookmark"
@@ -78,12 +80,15 @@
                 </div>
               </div>
               <li class="nav-item mx-2">
-                <a class="nav-link close" aria-current="page" href="#features"
+                <a
+                  class="nav-link"
+                  aria-current="page"
+                  href="#features"
                   >Features</a
                 >
               </li>
               <li class="nav-item mx-2">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link" href="#download">Pricing</a>
               </li>
               <li class="nav-item mx-2">
                 <a class="nav-link" href="#contact">Contact</a>
@@ -109,7 +114,7 @@
         <div
           class="left-container row row-cols-1 row-cols-md-2 align-items-center"
         >
-          <div class="col text-center text-md-start mt-5 mt-md-0">
+          <div class="col text-center text-md-start mt-5 mt-md-0 px-4">
             <h1 class="text-s-dark">A Simple Bookmark Manager</h1>
             <p class="text-s-light">
               A clean and simple interface to organize your favourite websites.
@@ -138,7 +143,7 @@
       <section id="features">
         <!-- features header start -->
         <div class="row justify-content-center">
-          <div class="col-md-6 text-center">
+          <div class="col-md-6 text-center px-4">
             <h2 class="my-4 text-s-dark">Features</h2>
             <p class="mb-5 text-s-light">
               Our aim is to make it quick and easy for you to access your
@@ -217,7 +222,7 @@
                   alt=""
                 />
               </div>
-              <div class="col text-center text-md-start mt-5 mt-md-0">
+              <div class="col text-center text-md-start mt-5 mt-md-0 px-4">
                 <h2 class="h2 text-s-dark">Bookmark in one click</h2>
                 <p class="text-s-light">
                   Organize your bookmarks however you like. Our simple
@@ -247,7 +252,7 @@
                   alt=""
                 />
               </div>
-              <div class="col text-center text-md-start mt-5 mt-md-0">
+              <div class="col text-center text-md-start mt-5 mt-md-0 px-4">
                 <h2 class="h2 text-s-dark">Intelligent search</h2>
                 <p class="text-s-light">
                   Our powerful search feature will help you find saved sites in
@@ -277,7 +282,7 @@
                   alt=""
                 />
               </div>
-              <div class="col text-center text-md-start mt-5 mt-md-0">
+              <div class="col text-center text-md-start mt-5 mt-md-0 px-4">
                 <h2 class="h2 text-s-dark">Share your bookmarks</h2>
                 <p class="text-s-light">
                   Easily share your bookmarks and collections with others.
@@ -295,11 +300,11 @@
       <!-- feature section end -->
 
       <!-- Download section start -->
-      <section>
+      <section id="download">
         <div class="container">
           <!-- download header start -->
           <div class="row justify-content-center">
-            <div class="col-md-5 text-center">
+            <div class="col-md-5 text-center px-4 px-md-0">
               <h2 class="my-4 text-s-dark">Download the extension</h2>
               <p class="text-s-light">
                 We've got more browsers in the pipeline. Please do let us know
@@ -381,7 +386,7 @@
         <div class="container">
           <!-- questions header start -->
           <div class="row justify-content-center">
-            <div class="col-md-5 text-center">
+            <div class="col-md-5 text-center px-4 ">
               <h2 class="my-4 text-s-dark">Frequently Asked Questions</h2>
               <p class="mb-5 text-s-light">
                 Here are some of our FAQs. If you have any other questions you'd
@@ -541,7 +546,7 @@
                 class="form-control"
                 id="floatingTextarea2"
               />
-              <label for="floatingTextarea2" class="text-s-light px-4"
+              <label for="floatingTextarea2" class="floating-label text-s-light"
                 >Enter you email address</label
               >
             </div>
