--- a/index.html
+++ b/index.html
@@ -21,26 +21,26 @@
         <a id="brand-link" class="navbar-brand" href="#"><img src="./images/logo-bookmark.svg" alt="Bookmark" /></a>
 
         <button id="hamburger-icon" class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-          data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+          data-bs-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false"
           aria-label="Toggle navigation">
-          <img src="./images/icon-hamburger.svg" alt="" />
+          <img src="./images/icon-hamburger.svg" alt="open nav" />
         </button>
-        <div id="navbarTogglerDemo02" class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
+        <div id="navbarToggler" class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight"
           aria-labelledby="offcanvasRightLabel">
           <ul class="navbar-nav ms-0 ms-lg-auto mb-2 mb-lg-0 align-items-center">
             <div class="offcanvas-header">
               <a class="navbar-brand" href="#"><img src="./images/logo-bookmark-light.svg" alt="Bookmark" /></a>
               <button type="button" id="close-btn" class="close-icon text-reset" data-bs-dismiss="offcanvas"
                 aria-label="Close">
-                <img src="images/icon-close.svg" alt="" />
+                <img src="images/icon-close.svg" alt="close nav" />
               </button>
               <div class="social">
                 <ul class="navbar-nav mb-2 mb-lg-0">
                   <li class="nav-item mx-2">
-                    <a class="" href="#"><img src="images/icon-facebook.svg" alt="" /></a>
+                    <a href="#"><img src="images/icon-facebook.svg" alt="facebook" /></a>
                   </li>
                   <li class="nav-item mx-2">
-                    <a class="" aria-current="page" href="#"><img src="images/icon-twitter.svg" alt="" /></a>
+                    <a aria-current="page" href="#"><img src="images/icon-twitter.svg" alt="twitter" /></a>
                   </li>
                 </ul>
               </div>
@@ -136,7 +136,7 @@
           aria-labelledby="nav-simple-bookmarking-tab">
           <div class="right-container my-5 row row-cols-1 row-cols-md-2 align-items-center">
             <div class="col background-shape-left">
-              <img class="container-fluid pb-5 px-5" src="./images/illustration-features-tab-1.svg" alt="" />
+              <img class="container-fluid pb-5 px-5" src="./images/illustration-features-tab-1.svg" alt="preview" />
             </div>
             <div class="col text-center text-md-start mt-5 mt-md-0 px-4">
               <h2 class="h2 text-s-dark">Bookmark in one click</h2>
@@ -156,7 +156,7 @@
           aria-labelledby="nav-speedly-searching-tab">
           <div class="right-container my-5 row row-cols-1 row-cols-md-2 align-items-center">
             <div class="col background-shape-left">
-              <img class="container-fluid pb-5 px-5" src="./images/illustration-features-tab-2.svg" alt="" />
+              <img class="container-fluid pb-5 px-5" src="./images/illustration-features-tab-2.svg" alt="preview" />
             </div>
             <div class="col text-center text-md-start mt-5 mt-md-0 px-4">
               <h2 class="h2 text-s-dark">Intelligent search</h2>
@@ -175,7 +175,7 @@
         <div class="tab-pane fade" id="nav-easy-sharing" role="tabpanel" aria-labelledby="nav-easy-sharing-tab">
           <div class="right-container my-5 row row-cols-1 row-cols-md-2 align-items-center">
             <div class="col background-shape-left">
-              <img class="container-fluid pb-5 px-5" src="./images/illustration-features-tab-3.svg" alt="" />
+              <img class="container-fluid pb-5 px-5" src="./images/illustration-features-tab-3.svg" alt="preview" />
             </div>
             <div class="col text-center text-md-start mt-5 mt-md-0 px-4">
               <h2 class="h2 text-s-dark">Share your bookmarks</h2>
@@ -210,12 +210,12 @@
         <!-- download header end -->
 
         <!-- cards start -->
-        <div class="row justify-content-center gap-4 my-5" style="min-height: 400px">
+        <div class="row justify-content-center gap-5 my-5" style="min-height: 400px">
           <!-- chrome card start -->
           <div class="card align-self-start" style="width: 18rem">
             <img src="images/logo-chrome.svg" class="card-img-top p-4 mt-3 mx-auto" alt="chrome" style="width: 50%" />
             <div class="card-body text-center">
-              <h5 class="card-title text-s-dark">Add to Chrome</h5>
+              <h3 class="card-title text-s-dark fs-5">Add to Chrome</h3>
               <p class="card-text text-s-light">Minimum version 62</p>
               <img src="images/bg-dots.svg" alt="" class="container-fluid" />
               <a href="#" class="btn btn-p-blue my-2">Add & Install Extension</a>
@@ -227,7 +227,7 @@
           <div class="card align-self-center" style="width: 18rem">
             <img src="images/logo-firefox.svg" class="card-img-top p-4 mt-3 mx-auto" alt="chrome" style="width: 50%" />
             <div class="card-body text-center">
-              <h5 class="card-title text-s-dark">Add to Firefox</h5>
+              <h3 class="card-title text-s-dark fs-5">Add to Firefox</h3>
               <p class="card-text text-s-light">Minimum version 55</p>
               <img src="images/bg-dots.svg" alt="" class="container-fluid" />
               <a href="#" class="btn btn-p-blue my-2">Add & Install Extension</a>
@@ -239,7 +239,7 @@
           <div class="card align-self-end" style="width: 18rem">
             <img src="images/logo-opera.svg" class="card-img-top p-4 mt-3 mx-auto" alt="chrome" style="width: 50%" />
             <div class="card-body text-center">
-              <h5 class="card-title text-s-dark">Add to Opera</h5>
+              <h3 class="card-title text-s-dark fs-5">Add to Opera</h3>
               <p class="card-text text-s-light">Minimum version 46</p>
               <img src="images/bg-dots.svg" alt="" class="container-fluid" />
               <a href="#" class="btn btn-p-blue my-2">Add & Install Extension</a>
@@ -271,12 +271,12 @@
           <div class="accordion col-md-6" id="questionAccordion">
             <!-- question 1 start -->
             <div class="accordion-item">
-              <h2 class="accordion-header" id="questionOne">
+              <h3 class="accordion-header" id="questionOne">
                 <button class="accordion-button collapsed text-s-dark" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                   What is Bookmark?
                 </button>
-              </h2>
+              </h3>
               <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="questionOne"
                 data-bs-parent="#questionAccordion">
                 <div class="accordion-body text-s-light">
@@ -290,12 +290,12 @@
 
             <!-- question 2 start -->
             <div class="accordion-item">
-              <h2 class="accordion-header" id="questionTow">
+              <h3 class="accordion-header" id="questionTow">
                 <button class="accordion-button collapsed text-s-dark" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                   How can I request a new browser?
                 </button>
-              </h2>
+              </h3>
               <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="questionTow"
                 data-bs-parent="#questionAccordion">
                 <div class="accordion-body text-s-light">
@@ -312,12 +312,12 @@
 
             <!-- question 3 start -->
             <div class="accordion-item">
-              <h2 class="accordion-header" id="questionThree">
+              <h3 class="accordion-header" id="questionThree">
                 <button class="accordion-button collapsed text-s-dark" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                   Is there a mobile app?
                 </button>
-              </h2>
+              </h3>
               <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="questionThree"
                 data-bs-parent="#questionAccordion">
                 <div class="accordion-body text-s-light">
@@ -332,12 +332,12 @@
 
             <!-- question 4 start -->
             <div class="accordion-item">
-              <h2 class="accordion-header" id="questionFour">
+              <h3 class="accordion-header" id="questionFour">
                 <button class="accordion-button collapsed text-s-dark" type="button" data-bs-toggle="collapse"
                   data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                   What about other Chromium browsers?
                 </button>
-              </h2>
+              </h3>
               <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="questionFour"
                 data-bs-parent="#questionAccordion">
                 <div class="accordion-body text-s-light">
@@ -387,18 +387,18 @@
     <!-- footer nav start -->
     <nav class="navbar navbar-expand-lg navbar-light bg-s-dark py-4">
       <div class="container justify-content-center align-items-center">
-        <a class="navbar-brand" href="#"><img class="text-light" src="./images/logo-bookmark-footer.svg" alt="" /></a>
+        <a class="navbar-brand" href="#"><img class="text-light" src="./images/logo-bookmark-footer.svg" alt="bookmark" /></a>
 
-        <div class="mx-md-5 me-lg-auto" id="navbarTogglerDemo02">
+        <div class="mx-md-5 me-lg-auto">
           <ul class="navbar-nav mb-2 mb-lg-0 text-center align-items-center">
             <li class="nav-item">
-              <a class="nav-link text-s-light" aria-current="page" href="#">Features</a>
+              <a class="nav-link text-light" aria-current="page" href="#">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-s-light" href="#">Pricing</a>
+              <a class="nav-link text-light" href="#">Pricing</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-s-light" href="#">Contact</a>
+              <a class="nav-link text-light" href="#">Contact</a>
             </li>
           </ul>
         </div>
@@ -406,10 +406,10 @@
         <div class="social">
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item mx-2">
-              <a class="nav-link" href="#"><img src="images/icon-facebook.svg" alt="" /></a>
+              <a class="nav-link" href="#"><img src="images/icon-facebook.svg" alt="facebook" /></a>
             </li>
             <li class="nav-item mx-2">
-              <a class="nav-link" aria-current="page" href="#"><img src="images/icon-twitter.svg" alt="" /></a>
+              <a class="nav-link" aria-current="page" href="#"><img src="images/icon-twitter.svg" alt="twitter" /></a>
             </li>
           </ul>
         </div>
